--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">Here is a little insight into my Strava activities.</div>
                             <!-- Post categories-->
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">My Strava Account</a>
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">WHOOP WHOOP!</a>
+                            <a class="badge bg-secondary text-decoration-none link-light" href="https://www.strava.com/athletes/68899871">My Strava Account</a>
+                            <a class="badge bg-secondary text-decoration-none link-light" href="https://www.whoop.com/">WHOOP WHOOP!</a>
                         </header>
                         <!-- Preview image figure-->
                         <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
