--- a/index.html
+++ b/index.html
@@ -47,12 +47,15 @@
                         <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                            <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                            <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                            <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                            <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                            <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
+                            
+                            <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
+                            <h2 class="fw-bolder mb-4 mt-5">Average Speed vs. Distance</h2>
+                            <p class="fs-5 mb-4">Pictured above is my average speed graphed against the distance I run. Each point is an individual workout. As expected, this represents my speed decreasing the farther I run.</p>
+                            <p class="fs-5 mb-4">I hope to do quite a few more longer distance runs to make my data more credible</p>
+                            <h2 class="fw-bolder mb-4 mt-5">Max Speed vs. Distance</h2>
+                            <p class="fs-5 mb-4">Here is my max speed plotted against the distance I ran. I am a little confused as to why that is increasing as the distance increases?</p>
+                            <p class="fs-5 mb-4">Maybe I just have a good sprint?</p>
+                            
                         </section>
                     </article>
                     <!-- Comments section-->
