--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                             <a class="badge bg-secondary text-decoration-none link-light" href="https://www.whoop.com/">WHOOP WHOOP!</a>
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded" src="favorite_view.JPG" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             
-                            <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
+                            <figure class="mb-4"><img class="img-fluid rounded" src="favorite_view_JPG" alt="..." /></figure>
                             <h2 class="fw-bolder mb-4 mt-5">Average Speed vs. Distance</h2>
                             <p class="fs-5 mb-4">Pictured above is my average speed graphed against the distance I run. Each point is an individual workout. As expected, this represents my speed decreasing the farther I run.</p>
                             <p class="fs-5 mb-4">I hope to do quite a few more longer distance runs to make my data more credible</p>
