--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="badge bg-secondary text-decoration-none link-light" href="https://www.whoop.com/">WHOOP WHOOP!</a>
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="favorite_view.JPG" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded" src="lights_out.jpg" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             
@@ -94,7 +94,7 @@
                                             <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">Marc</div>
-                                                Yeah! if you pay for 18 months you can get it for only $18 a month. And thats a cheasp price for a whole new lifestyle. It will definitely bring your Strava to the next level.
+                                                Yeah! if you pay for 18 months you can get it for only $18 a month. And thats a cheap price for a whole new lifestyle. It will definitely bring your Strava to the next level.
                                             </div>
                                         </div>
                                         
@@ -112,8 +112,8 @@
                                 <div class="d-flex">
                                     <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
                                     <div class="ms-3">
-                                        <div class="fw-bold">Commenter Name</div>
-                                        When I look at the universe and all the ways the universe wants to kill us, I find it hard to reconcile that with statements of beneficence.
+                                        <div class="fw-bold">Cal Wilson</div>
+                                        I would totally reccomend! It tracks my workouts and sleep and even ranks how well my recovery is going. Its a major game changer. 
                                     </div>
                                 </div>
                             </div>
