--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                             <h2 class="fw-bolder mb-4 mt-5">Average Speed vs. Distance</h2>
                             <figure class="mb-4"><img class="img-fluid rounded" src="avgspeed_distance.jpg" alt="..." /></figure>
                             <p class="fs-5 mb-4">Pictured above is my average speed graphed against the distance I run. Each point is an individual workout. As expected, this represents my speed decreasing the farther I run.</p>
-                            <p class="fs-5 mb-4">I hope to do quite a few more longer distance runs to make my data more credible</p>
+                            <p class="fs-5 mb-4">What can I do with this data? I can use this graph to improve my worout habits. In the future, i hope to decrease the magnitude of the slope of this line. Hopefully I can maintain a faster pace even through my longer runs. I also hope to be hitting higher speeds while still maintaining a consistent pace.</p>
+                            <p class="fs-5 mb-4">I hope to do more longer distance runs to make my data more credible. I need more points in the higher distance range to improve my line of best fit and make my data slightly more accurate. I have also considered taking out the outlier runs which include recovery runs or maybe slow paced runs that I did with friends. Although, this would not be a real representation of my running habits.</p>
                             
                             <h2 class="fw-bolder mb-4 mt-5">Max Speed vs. Distance</h2>
                             <figure class="mb-4"><img class="img-fluid rounded" src="maxspeed_distance.jpg" alt="..." /></figure>
