--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
                             
                             <h2 class="fw-bolder mb-4 mt-5">Max Speed vs. Distance</h2>
                             <figure class="mb-4"><img class="img-fluid rounded" src="maxspeed_distance.jpg" alt="..." /></figure>
-                            <p class="fs-5 mb-4">Here is my max speed plotted against the distance I ran. I am a little confused as to why that is increasing as the distance increases?</p>
-                            <p class="fs-5 mb-4">Maybe I just have a good sprint?</p>
+                            <p class="fs-5 mb-4">Here is my max speed plotted against the distance I ran. The line of best fit is increasing as the distance increases.</p>
+                            <p class="fs-5 mb-4">I think that this data is very interesting. I do not think this gives me much insight into my performace because I am not interested in my max speed. However, it is nice to see that i am able to hit those higher speeds on my longer runs. I hope this means I have a good sprint.</p>
+                            <p class="fs-5 mb-4">In the future, It would be cool to do more print workoiuts and incorporate those into my code. I ould like to see how that woudl affect my line of best fit.</p>
                             
                             <h2 class="fw-bolder mb-4 mt-5">Date vs. Average Speed</h2>
                             <figure class="mb-4"><img class="img-fluid rounded" src="date_avgspeed.jpg" alt="..." /></figure>
