--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="badge bg-secondary text-decoration-none link-light" href="https://www.whoop.com/">WHOOP WHOOP!</a>
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="lights_out.jpg" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded" src="lights_out.jpeg" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             
