--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                                 <!-- Comment with nested comments-->
                                 <div class="d-flex mb-4">
                                     <!-- Parent comment-->
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                    <div class="flex-shrink-0"><img class="rounded-circle" src="marc.jpeg" alt="..." /></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">Marc</div>
                                         Get the Whoop Ella! You only live once, and what is $18 a month when youre dead?
                                         <!-- Child comment 1-->
                                         <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                            <div class="flex-shrink-0"><img class="rounded-circle" src="steph.jpeg" alt="..." /></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">Stephanie Hulme</div>
                                                 Wait, I thought it was $30? is that some sort of deal?
@@ -93,7 +93,7 @@
                                         </div>
                                         
                                         <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                            <div class="flex-shrink-0"><img class="rounded-circle" src="marc.jpeg" alt="..." /></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">Marc</div>
                                                 Yeah! if you pay for 18 months you can get it for only $18 a month. And thats a cheap price for a whole new lifestyle. It will definitely bring your Strava to the next level.
@@ -104,7 +104,7 @@
                                         <div class="d-flex mt-4">
                                             <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
                                             <div class="ms-3">
-                                                <div class="fw-bold">Commenter Name</div>
+                                                <div class="fw-bold">Tatum</div>
                                                 When you put money directly to a problem, it makes a good headline.
                                             </div>
                                         </div>
