--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                                         
                                         <!-- Child comment 2-->
                                         <div class="d-flex mt-4">
-                                            <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                            <div class="flex-shrink-0"><img class="rounded-circle" src="tatum.jpeg" alt="..." /></div>
                                             <div class="ms-3">
-                                                <div class="fw-bold">Tatum</div>
+                                                <div class="fw-bold">Tatum Wilhelm</div>
                                                 When you put money directly to a problem, it makes a good headline.
                                             </div>
                                         </div>
@@ -112,7 +112,7 @@
                                 </div>
                                 <!-- Single comment-->
                                 <div class="d-flex">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="https://dummyimage.com/50x50/ced4da/6c757d.jpg" alt="..." /></div>
+                                    <div class="flex-shrink-0"><img class="rounded-circle" src="cal.jpeg" alt="..." /></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">Cal Wilson</div>
                                         I would totally reccomend! It tracks my workouts and sleep and even ranks how well my recovery is going. Its a major game changer. 
