--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="card bg-light">
                             <div class="card-body">
                                 <!-- Comment form-->
-                                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Join the discussion and leave a comment!"></textarea></form>
+                                <form class="mb-4"><textarea class="form-control" rows="3" placeholder="Comment down below if I should get a Whoop!"></textarea></form>
                                 <!-- Comment with nested comments-->
                                 <div class="d-flex mb-4">
                                     <!-- Parent comment-->
