--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                             <div class="flex-shrink-0"><img class="rounded-circle" src="tatum.jpeg" alt="..." /></div>
                                             <div class="ms-3">
                                                 <div class="fw-bold">Tatum Wilhelm</div>
-                                                When you put money directly to a problem, it makes a good headline.
+                                                I don't know. I personally love my polar heartrate monitor. I think the Whoop is just too big of a commitment!
                                             </div>
                                         </div>
                                     </div>
