--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
                                         I would totally reccomend! It tracks my workouts and sleep and even ranks how well my recovery is going. Its a major game changer. 
                                     </div>
                                 </div>
+                                 <div class="d-flex">
+                                    <div class="flex-shrink-0"><img class="rounded-circle" src="tatum.jpeg" alt="..." /></div>
+                                    <div class="ms-3">
+                                        <div class="fw-bold">Cal Wilson</div>
+                                        I don't know. I personally love my polar heartrate monitor. I think the Whoop is just too big of a commitment! 
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
