--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                     </div>
                     <!-- Side widget-->
                     <div class="card mb-4">
-                        <div class="card-header">PUT SOMETHING COOL IN HERE</div>
-                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                        <div class="card-header">Future Plans</div>
+                        <div class="card-body">Rowing data, Biking Data, and hopefully Heartrate Data</div>
                     </div>
                 </div>
             </div>
