--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
-                                        <li><a href="#!">Web Design</a></li>
-                                        <li><a href="#!">HTML</a></li>
-                                        <li><a href="#!">Freebies</a></li>
+                                        <li><a href="https://github.com/egersack">My Github</a></li>
+                                        <li><a href="https://greatruns.com/boston-the-charles-river-paths/">Charles Running</a></li>
+                                        <li><a href="https://www.traillink.com/trail/roswell-riverwalk/">Chattahoochee Runnning</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
-                                        <li><a href="#!">JavaScript</a></li>
-                                        <li><a href="#!">CSS</a></li>
+                                        <li><a href="https://mitathletics.com/sports/wcrewop">MIT Openweight Rowing</a></li>
+                                        <li><a href="https://www.instagram.com/girlsintheboat/?hl=en">MIT WOW Instagram</a></li>
                                         <li><a href="#!">Tutorials</a></li>
                                     </ul>
                                 </div>
