--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     </div>
                     <!-- Side widget-->
                     <div class="card mb-4">
-                        <div class="card-header">Future Plans</div>
-                        <div class="card-body">Rowing data, Biking Data, and hopefully Heartrate Data</div>
+                        <div class="card-header">My Next Steps</div>
+                        <div class="card-body">I hope to incorporate rowing and biking data in my code. I am also in the market for a heart rate monitor which would give me a lot of new information.</div>
                     </div>
                 </div>
             </div>
