--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     </div>
                                 </div>
                                  <div class="d-flex">
-                                    <div class="flex-shrink-0"><img class="rounded-circle" src="lights_out.jpeg" alt="..." /></div>
+                                    <div class="flex-shrink-0"><img class="rounded-circle" src="tatum.jpeg" alt="..." /></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">Tatum Wilhelm</div>
                                         I don't know. I personally love my polar heartrate monitor. I think the Whoop is just too big of a commitment! 
