--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
                                     <ul class="list-unstyled mb-0">
                                         <li><a href="https://github.com/egersack">My Github</a></li>
                                         <li><a href="https://greatruns.com/boston-the-charles-river-paths/">Charles Running</a></li>
-                                        <li><a href="https://www.traillink.com/trail/roswell-riverwalk/">Chattahoochee Runnning</a></li>
+                                        <li><a href="https://www.traillink.com/trail/roswell-riverwalk/">'Hooch Runnning</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-6">
                                     <ul class="list-unstyled mb-0">
                                         <li><a href="https://mitathletics.com/sports/wcrewop">MIT Openweight Rowing</a></li>
                                         <li><a href="https://www.instagram.com/girlsintheboat/?hl=en">MIT WOW Instagram</a></li>
-                                        <li><a href="#!">Tutorials</a></li>
+                                        <li><a href="https://www.polar.com/us-en/products/accessories?gclid=Cj0KCQjwpcOTBhCZARIsAEAYLuUBlbSqokSZkuCkcAW8_uKwHqBP-7c4L18WrYGWgrOT1lWY57tIhEEaAlDJEALw_wcB#pf6=1">Polar HR</a></li>
                                     </ul>
                                 </div>
                             </div>
