--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <!-- Post header-->
                         <header class="mb-4">
                             <!-- Post title-->
-                            <h1 class="fw-bolder mb-1">Welcome to my Strava summary!</h1>
+                            <h1 class="fw-bolder mb-1">Welcome to my Strava Summary!</h1>
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">Here is a little insight into my Strava activities.</div>
                             <!-- Post categories-->
