--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <div class="flex-shrink-0"><img class="rounded-circle" src="marc.jpeg" alt="..." /></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">Marc</div>
-                                        Get the Whoop Ella! You only live once, and what is $18 a month when youre dead?
+                                        Get the Whoop Ella! You only live once, and what is $18 a month when you're dead?
                                         <!-- Child comment 1-->
                                         <div class="d-flex mt-4">
                                             <div class="flex-shrink-0"><img class="rounded-circle" src="steph.jpeg" alt="..." /></div>
@@ -106,7 +106,7 @@
                                     <div class="flex-shrink-0"><img class="rounded-circle" src="cal.jpeg" alt="..." /></div>
                                     <div class="ms-3">
                                         <div class="fw-bold">Cal Wilson</div>
-                                        I would totally reccomend! It tracks my workouts and sleep and even ranks how well my recovery is going. Its a major game changer. 
+                                        I would totally reccomend! It tracks my workouts and sleep and even tells me how well my recovery is going. Its a major game changer. 
                                     </div>
                                 </div>
                                  <div class="d-flex">
